# LaptopInsight-Cleaning-EDA

./: 01_laptop_cleaning_and_univariate_analysis_.ipynb  02_bivariate_analysis_ .ipynb  README.md  app.py  bivariate_analysis.py  laptop_cleaning.csv  laptop_cleaning.ipynb  main.py  overview.py  pyproject.toml  requirements.txt  univariate_analysis.py
