[project]
name = "LaptopInsight-Cleaning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "notebook>=7.4.2",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "plotly-express>=0.4.1",
    "scapy>=2.6.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
]
